wip: interface for the solver

--- a/src/lib/dune
+++ b/src/lib/dune
@@ -4,5 +4,5 @@
   (public_name minisat-ml)
   (wrapped false)
   (inline_tests (backend qtest.lib))
-  (flags (:standard -warn-error -27-32-34))
+  (flags (:standard -warn-error -27-32-33-34))
   (libraries iter containers))
