--- a/src/bin/dune
+++ b/src/bin/dune
@@ -3,5 +3,6 @@
   (name minisat)
   (modes native)
   (public_name minisat-ml)
-  (libraries minisat-ml))
+  (flags :standard -warn-error -32-33-34)
+  (libraries bytes unix minisat-ml minisat-ml.util))
 
