--- a/src/lib/dune
+++ b/src/lib/dune
@@ -4,5 +4,4 @@
   (public_name minisat-ml)
   (wrapped false)
   (inline_tests (backend qtest.lib))
-  (flags (:standard -warn-error -27-32-33-34))
-  (libraries iter containers))
+  (flags (:standard -warn-error -27-32-33-34)))
