perf: add z3 into the benchmarking setup

--- a/benchs/conf.toml
+++ b/benchs/conf.toml
@@ -1,5 +1,5 @@
 
-provers = [ "minisat-ml", "minisat", "msat" ]
+provers = [ "minisat-ml", "minisat", "msat", "z3" ]
 
 [minisat-ml]
 
@@ -18,6 +18,14 @@ sat = "^SATISFIABLE"
 unknown = "INDETERMINATE"
 version = "2.2"
 
+[z3]
+
+cmd = "./z3.sh $file -T:$timeout"
+unsat = "^unsat$"
+sat = "^sat$"
+unknown = "^unknown$"
+version = "4.8.4"
+
 [msat]
 
 cmd = "msat -time $timeout $file"
@@ -30,7 +38,7 @@ version = "0.8"
 
 timeout=30
 problems = ".*\\.cnf\\.*"
-provers = [ "minisat-ml", "minisat", "msat" ]
+provers = [ "minisat-ml", "minisat", "msat", "z3" ]
 dir = [ "benchs/msat/" ]
 
 expect = "program:minisat"
