refactor: use custom index operators from 4.06

--- a/minisat-ml.opam
+++ b/minisat-ml.opam
@@ -9,6 +9,7 @@ build: [
   ["dune" "runtest" "-p" name] {with-test}
 ]
 depends: [
+  "ocaml" { >= "4.06" }
   "camlzip"
   "dune" {build}
   "odoc" {with-doc}
